[package]
name = "volk"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
repository = "https://github.com/ThomasHabets/volk"
description = "Rust bindings for volk"

[dependencies]
libc = "0.2"
num-complex = "0.4.6"
paste = "1.0.15"

[build-dependencies]
pkg-config = "0.3"
