[package]
name = "volk"
version = "0.1.6"
edition = "2024"
license = "LGPL-3.0-only"
authors = ["Thomas Habets <thomas@habets.se>"]
repository = "https://github.com/ThomasHabets/volk-rs"
description = "Rust bindings for volk"

[dependencies]
libc = "0.2"
num-complex = "0.4.6"
paste = "1.0.15"

[build-dependencies]
pkg-config = "0.3"
